project images replaced

--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -275,7 +275,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">INTEL INNOVATION- AEM</h2>
                   <p class="item-intro text-muted">Canada</p>
-                  <img class="img-fluid d-block mx-auto" src="../../../assets/img/portfolio/intel1.jpg" alt="">
+                  <img class="img-fluid d-block mx-auto" src="../../../assets/img/portfolio/intel1.png" alt="">
                   <p>Intel® technology enables Trusted Infrastructure through a suite of platform security technologies built into Intel® silicon. Hardware-based security technologies provide a critical foundation for secure IT. They address the numerous, increasing, and evolving security threats across physical and virtual infrastructures.</p>
                   <ul class="list-inline">
                     <li>Project duration: February 2013 - January 2014</li>
