angular content update

--- a/src/app/components/aboutme/aboutme.component.html
+++ b/src/app/components/aboutme/aboutme.component.html
@@ -13,7 +13,7 @@
         <ul class="timeline">
           <li>
             <div class="timeline-image">
-              <img class="rounded-circle img-fluid" src="../../../assets/img/about/1.jpg" alt="">
+              <img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="">
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
@@ -27,7 +27,7 @@
           </li>
           <li class="timeline-inverted">
             <div class="timeline-image">
-              <img class="rounded-circle img-fluid" src="../../../assets/img/about/2.jpg" alt="">
+              <img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="">
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
@@ -41,7 +41,7 @@
           </li>
           <li>
             <div class="timeline-image">
-              <img class="rounded-circle img-fluid" src="../../../assets/img/about/3.jpg" alt="">
+              <img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="">
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
@@ -54,8 +54,8 @@
             </div>
           </li>
           <li class="timeline-inverted">
-            <div class="timeline-image">
-              <img class="rounded-circle img-fluid" src="../../../assets/img/about/4.jpg" alt="">
+            <div class="timeline-image" style="background: #1d4068;">
+              <img class="rounded-circle img-fluid" src="assets/img/about/cat-organized.png" alt="">
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
@@ -68,8 +68,8 @@
             </div>
           </li>
           <li>
-            <div class="timeline-image">
-              <img class="rounded-circle img-fluid" src="../../../assets/img/about/3.jpg" alt="">
+            <div class="timeline-image" style="background: #d28185;">
+              <img class="rounded-circle img-fluid" src="assets/img/about/cat-productive.png" alt="">
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
@@ -81,6 +81,22 @@
               </div>
             </div>
           </li>
+
+          <li class="timeline-inverted">
+            <div class="timeline-image" style="background: #c2daba;">
+                <img class="rounded-circle img-fluid" src="assets/img/about/cat-safe.png" alt="">
+            </div>
+            <div class="timeline-panel">
+                <div class="timeline-heading">
+                    <h4>August 2019 - Present</h4>
+                    <h4 class="subheading">Expert in Web development</h4>
+                </div>
+                <div class="timeline-body">
+                    <p class="text-muted">Joined Schneider Electric as Module Lead. Developing Programmable Logic Controller(PLC) Convertor tool into rich modernization Web page using Angular and RESTful implementations. </p>
+                </div>
+            </div>
+        </li>
+
           <li class="timeline-inverted">
             <div class="timeline-image">
               <h4>Be Part
