--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -15,7 +15,7 @@
               <i class="fa fa-plus fa-3x"></i>
             </div>
           </div>
-          <img class="img-fluid" src="../../../assets/img/portfolio/cgiiap1.jpg" alt="">
+          <img class="img-fluid" src="assets/img/portfolio/cgiiap1.jpg" alt="">
         </a>
         <div class="portfolio-caption">
           <h4>Intelligent Automation platform (IAP)</h4>
@@ -29,7 +29,7 @@
               <i class="fa fa-plus fa-3x"></i>
             </div>
           </div>
-          <img class="img-fluid" src="../../../assets/img/portfolio/danskebank.png" alt="">
+          <img class="img-fluid" src="assets/img/portfolio/danskebank.png" alt="">
         </a>
         <div class="portfolio-caption">
           <h4>Danske Bank</h4>
@@ -43,7 +43,7 @@
               <i class="fa fa-plus fa-3x"></i>
             </div>
           </div>
-          <img class="img-fluid" src="../../../assets/img/portfolio/gehealthcare1.JPG" alt="">
+          <img class="img-fluid" src="assets/img/portfolio/gehealthcare1.JPG" alt="">
         </a>
         <div class="portfolio-caption">
           <h4>General Electric - Healthcare</h4>
@@ -57,7 +57,7 @@
               <i class="fa fa-plus fa-3x"></i>
             </div>
           </div>
-          <img class="img-fluid" src="../../../assets/img/portfolio/nbc1.JPG" alt="">
+          <img class="img-fluid" src="assets/img/portfolio/nbc1.JPG" alt="">
         </a>
         <div class="portfolio-caption">
           <h4>National bank of canada</h4>
@@ -71,7 +71,7 @@
               <i class="fa fa-plus fa-3x"></i>
             </div>
           </div>
-          <img class="img-fluid" src="../../../assets/img/portfolio/geaviation1.jpg" alt="">
+          <img class="img-fluid" src="assets/img/portfolio/geaviation1.jpg" alt="">
         </a>
         <div class="portfolio-caption">
           <h4>General Electric - Aviation</h4>
@@ -85,7 +85,7 @@
               <i class="fa fa-plus fa-3x"></i>
             </div>
           </div>
-          <img class="img-fluid" src="../../../assets/img/portfolio/intel1.png" alt="">
+          <img class="img-fluid" src="assets/img/portfolio/intel1.png" alt="">
         </a>
         <div class="portfolio-caption">
           <h4>Intel Innovation- AEM</h4>
@@ -115,7 +115,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">INTELLIGENT AUTOMATION PLATFORM</h2>
                   <p class="item-intro text-muted">ERP - Sweden</p>
-                  <img class="img-fluid d-block mx-auto" src="../../../assets/img/portfolio/cgiiap2.jpg" alt="">
+                  <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/cgiiap2.jpg" alt="">
                   <p>IAP monitoring services helps organisations in managing complex IT infrastructure that include heterogeneous applications and network devices by implementing advanced troubleshooting methodologies and relevant technology and domain related expertise.</p>
                   <ul class="list-inline">
                     <li>Project duration: September 2017 - Present</li>
@@ -147,7 +147,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">DANSKE BANK</h2>
                   <p class="item-intro text-muted">Banking & Finance - Denmark</p>
-                  <img class="img-fluid d-block mx-auto" src="../../../assets/img/portfolio/danskebank1.JPG" alt="">
+                  <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/danskebank1.JPG" alt="">
                   <p>Danske Bank is a Nordic bank with strong local roots and bridges to the rest of the world. For more than 145 years, danske bank have helped people and businesses in the Nordics realise their ambitions. Today, bank serve personal, business and institutional customers and in addition to banking services, bank offer life insurance and pension, mortgage credit, wealth management, real estate and leasing services. Danske bank aim to create long-term value for all our stakeholders – our customers, shareholders and the societies we are part of – and our vision is to be recognised as the most trusted financial partner.</p>
                   <ul class="list-inline">
                     <li>Project duration: June 2015 - September 2017</li>
@@ -179,7 +179,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">GENERAL ELECTRIC - HEALTHCARE</h2>
                   <p class="item-intro text-muted">Bangalore</p>
-                  <img class="img-fluid d-block mx-auto" src="../../../assets/img/portfolio/gehealthcare2.jpg" alt="">
+                  <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/gehealthcare2.jpg" alt="">
                   <p>GE Healthcare is the $19 billion healthcare business of GE (NYSE: GE). As a leading provider of medical imaging, monitoring, biomanufacturing, and cell and gene therapy technologies, GE Healthcare enables precision health in diagnostics, therapeutics and monitoring through intelligent devices, data analytics, applications and services. With over 100 years of experience in the healthcare industry and more than 50,000 employees globally, the company helps improve outcomes more efficiently for patients, healthcare providers, researchers and life sciences companies around the world.</p>
                   <ul class="list-inline">
                     <li>Project duration: June 2013 - September 2014</li>
@@ -211,7 +211,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">NATIONAL BANK OF CANADA - BANQUE NATIONALE DU CANADA</h2>
                   <p class="item-intro text-muted">Banking - Canada</p>
-                  <img class="img-fluid d-block mx-auto" src="../../../assets/img/portfolio/nbc2.JPG" alt="">
+                  <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/nbc2.JPG" alt="">
                   <p>The National Bank of Canada (French: Banque Nationale du Canada) is the sixth largest commercial bank in Canada. It is headquartered in Montreal, and has branches in most Canadian provinces and 2.4 million personal clients.[4] National Bank is the largest bank in Quebec, and the second largest financial institution in the province, after Desjardins credit union. National Bank's Institution Number is 006 and its SWIFT code is BNDCCAMMINT.</p>
                   <ul class="list-inline">
                     <li>Project duration: January 2013 - June 2013</li>
@@ -243,7 +243,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">GENERAL ELECTRIC - AVIATION</h2>
                   <p class="item-intro text-muted">Evendale, Ohio</p>
-                  <img class="img-fluid d-block mx-auto" src="../../../assets/img/portfolio/geaviation2.jpg" alt="">
+                  <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/geaviation2.jpg" alt="">
                   <p>With a broad range of avionics, power, and structures products, GE Aviation's Systems portfolio is bringing the future of flight to today's commercial aircraft. From Integrated Propulsion Systems that create unprecedented engine energy efficiencies to advanced flight management systems that enhance the capacity of the skies, GE provides the advanced technologies critical to superior aircraft performance and is poised to take civil aviation to the next level.</p>
                   <ul class="list-inline">
                     <li>Project duration: September 2014 - January 2015</li>
@@ -275,7 +275,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">INTEL INNOVATION- AEM</h2>
                   <p class="item-intro text-muted">Canada</p>
-                  <img class="img-fluid d-block mx-auto" src="../../../assets/img/portfolio/intel1.png" alt="">
+                  <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/intel1.png" alt="">
                   <p>Intel® technology enables Trusted Infrastructure through a suite of platform security technologies built into Intel® silicon. Hardware-based security technologies provide a critical foundation for secure IT. They address the numerous, increasing, and evolving security threats across physical and virtual infrastructures.</p>
                   <ul class="list-inline">
                     <li>Project duration: February 2013 - January 2014</li>
