--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -3,8 +3,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">{{ 'SERVICES.TITLE' | translate }}</h2>
-          <h3 class="section-subheading text-muted">{{ 'SERVICES.TEXT1' | translate }}</h3>
+          <h2 class="section-heading text-uppercase">SERVICES</h2>
+          <h3 class="section-subheading text-muted">
+            Goutam singh providing best and affordable web development services globally. We can handle all of your website needs. Help in hosting, email, domain name, secure hosting and signature hosting accounts.
+          </h3>
         </div>
       </div>
       <div class="row text-center">
@@ -13,8 +15,8 @@
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-connectdevelop fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">{{ 'SERVICES.TEXT2' | translate }}</h4>
-          <p class="text-muted">{{ 'SERVICES.TEXT3' | translate }}</p>
+          <h4 class="service-heading">Web development</h4>
+          <p class="text-muted">Develop application with high quality security.Easy access and search options of the products for the customers.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
