--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-sm-12">
     <div class="team-member">
-      <img class="mx-auto rounded-circle" src="../../../assets/img/team/4.png" alt="">
+      <img class="mx-auto rounded-circle" src="assets/img/team/4.png" alt="">
       <h4 style="color:#efefef;">Goutam singh</h4>
       <p class="text-muted" style="color: #adb0b3 !important;">Consultant</p>
       <div class="text-muted" style="color: #adb0b3 !important;">Email: afixi.gautam@gmail.com</div>
