--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
   <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright ©<span class="msgTxt">GMserve.com</span></span>
+            <span class="copyright">Copyright ©<span class="msgTxt">goutamsingh.com</span></span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
