--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,9 +2,9 @@
  <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">{{ 'HEADER.TEXT1' | translate }}</div>
-        <div class="intro-heading text-uppercase">{{ 'HEADER.TEXT2' | translate }}</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">{{ 'HEADER.TEXT3' | translate }}</a>
+        <div class="intro-lead-in">Welcome To my Studio!</div>
+        <div class="intro-heading text-uppercase">IT'S NICE TO MEET YOU</div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">TELL ME MORE</a>
       </div>
     </div>
   </header>
