--- a/src/app/components/technology/technology.component.html
+++ b/src/app/components/technology/technology.component.html
@@ -8,75 +8,101 @@
       </div>
     </div>
 
-<div class="row">
+  <div class="row">
       <div class="col-sm-4">
         <div class="team-member">
-          <img class="mx-auto rounded-circle" src="../../../assets/img/team/html5.png" alt="">
+          <img class="mx-auto rounded-circle" src="assets/img/team/html5.png" alt="">
           <h4>HTML5</h4>
           <p class="text-muted"></p>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="team-member">
-          <img class="mx-auto rounded-circle" src="../../../assets/img/team/css3.png" alt="">
+          <img class="mx-auto rounded-circle" src="assets/img/team/css3.png" alt="">
           <h4>CSS3</h4>
           <p class="text-muted"></p>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="team-member">
-          <img class="mx-auto rounded-circle" src="../../../assets/img/team/angular.png" alt="">
+          <img class="mx-auto rounded-circle" src="assets/img/team/angular.png" alt="">
           <h4>ANGULAR</h4>
           <p class="text-muted"></p>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="team-member">
-          <img class="mx-auto rounded-circle" src="../../../assets/img/team/git.png" alt="">
-          <h4>GIT</h4>
-          <p class="text-muted"></p>
-          <!--ul class="list-inline social-buttons">
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fa fa-twitter"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fa fa-facebook"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fa fa-linkedin"></i>
-              </a>
-            </li>
-          </ul-->
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="team-member">
-          <img class="mx-auto rounded-circle" src="../../../assets/img/team/bootstrap.png" alt="">
-          <h4>BOOTSTRAP</h4>
-          <p class="text-muted"></p>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="team-member">
-          <img class="mx-auto rounded-circle" src="../../../assets/img/team/jquery.png" alt="">
-          <h4>JQUERY</h4>
-          <p class="text-muted"></p>
-        </div>
-      </div>
-    </div>
+  </div>
 
-    <div class="row">
-      <div class="col-lg-8 mx-auto text-center">
-        <p class="large text-muted"></p>
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="team-member">
+        <img class="mx-auto rounded-circle" src="assets/img/team/git.png" alt="">
+        <h4>GIT</h4>
+        <p class="text-muted"></p>
+        <!--ul class="list-inline social-buttons">
+          <li class="list-inline-item">
+            <a href="#">
+              <i class="fa fa-twitter"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <i class="fa fa-facebook"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <i class="fa fa-linkedin"></i>
+            </a>
+          </li>
+        </ul-->
       </div>
     </div>
+    <div class="col-sm-4">
+      <div class="team-member">
+        <img class="mx-auto rounded-circle" src="assets/img/team/bootstrap.png" alt="">
+        <h4>BOOTSTRAP</h4>
+        <p class="text-muted"></p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="team-member">
+        <img class="mx-auto rounded-circle" src="assets/img/team/jquery.png" alt="">
+        <h4>JQUERY</h4>
+        <p class="text-muted"></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="team-member">
+        <img class="mx-auto rounded-circle" src="assets/img/team/sass.png" alt="">
+        <h4>SASS</h4>
+        <p class="text-muted"></p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="team-member">
+        <img class="mx-auto rounded-circle" src="assets/img/team/node.png" alt="">
+        <h4>NODE</h4>
+        <p class="text-muted"></p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="team-member">
+        <img class="mx-auto rounded-circle" src="assets/img/team/react.png" alt="">
+        <h4>REACT</h4>
+        <p class="text-muted"></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-8 mx-auto text-center">
+      <p class="large text-muted"></p>
+    </div>
+  </div>
+
   </div>
 </section>
 
@@ -86,22 +112,22 @@
     <div class="row">
       <div class="col-md-3 col-sm-6">
         <a href="#">
-          <img class="img-fluid d-block mx-auto" src="../../../assets/img/logos/envato.jpg" alt="">
+          <img class="img-fluid d-block mx-auto" src="assets/img/logos/envato.jpg" alt="">
         </a>
       </div>
       <div class="col-md-3 col-sm-6">
         <a href="#">
-          <img class="img-fluid d-block mx-auto" src="../../../assets/img/logos/designmodo.jpg" alt="">
+          <img class="img-fluid d-block mx-auto" src="assets/img/logos/designmodo.jpg" alt="">
         </a>
       </div>
       <div class="col-md-3 col-sm-6">
         <a href="#">
-          <img class="img-fluid d-block mx-auto" src="../../../assets/img/logos/themeforest.jpg" alt="">
+          <img class="img-fluid d-block mx-auto" src="assets/img/logos/themeforest.jpg" alt="">
         </a>
       </div>
       <div class="col-md-3 col-sm-6">
         <a href="#">
-          <img class="img-fluid d-block mx-auto" src="../../../assets/img/logos/creative-market.jpg" alt="">
+          <img class="img-fluid d-block mx-auto" src="assets/img/logos/creative-market.jpg" alt="">
         </a>
       </div>
     </div>
